StateComputer to use Txn rather than Command